--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/v123582/forum-express-workspace#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
